Add signer pubkey and tx info to GetInfo response and tx notification messages
